
//======================//
//  ARQUIVO CARGO.TOML  //
//======================//


[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "senha"
path = "src/senha.rs"


[dependencies]
rusqlite = "0.26.0"
aes = "0.7.5"
block-modes = "0.8.1"
block-padding = "0.2.0"
base64 = "0.21.0"  # Adicione esta linha
